Preparing to add the settings page.
Signed-off-by: Boudjada Yasser <by.root96@gmail.com>

--- a/hiphp-desktop/src/style.css
+++ b/hiphp-desktop/src/style.css
@@ -100,6 +100,14 @@ spam:hover {
     padding: 5px;
     background-color: #e7e7e7;
 }
+.settings{
+  margin-top: -14px;
+  display:none;
+  /*width: 100%;*/
+  height: calc(100vh - 50px);
+  padding: 5px;
+  background-color: #e7e7e7;
+}
 #login{
     width: 100%;
     height: 100px;
@@ -145,16 +153,16 @@ textarea{
   display:revert;
 }
 
-#ls td, #ls th {
+#ls td, #ls th, #settings td, #settings th {
   /*border: 1px solid #ddd;*/
   padding: 8px;
 }
 
-#ls tr:nth-child(even){background-color: #f2f2f2;}
+#ls tr:nth-child(even), #settings tr:nth-child(even){background-color: #f2f2f2;}
 
-#ls tr:hover {background-color: #ddd;}
+#ls tr:hover, #settings tr:hover{background-color: #ddd;}
 
-#ls th {
+#ls th, #settings th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -200,5 +208,107 @@ textarea{
   color: #08a76d;
 }
 
+/**/
+.holder{
+  background: #fff;
+  border-radius:5px; 	
+  box-shadow: 0 2px 3px 0 rgba(0,0,0,.1);	
+  margin:100px auto;
+  padding:30px 20px 20px;
+  width:80%;
+}
 
+/*td{
+  border-bottom:1px solid #f6f6f6;
+  padding:5px 10px;
+}
+
+td:nth-child(2){
+  text-align: right;
+  width: 40px;
+}
+
+tr:last-child td{
+  border:none;
+  padding:30px 10px 10px;
+  text-align: center;
+}*/
+
+input[type=checkbox] {
+  cursor: pointer;
+  height: 30px;
+  margin:4px 0 0;
+  position: absolute;
+  opacity: 0;
+  width: 30px;
+  z-index: 2;
+}
+
+input[type=checkbox] + span {
+  background: #e74c3c;
+  border-radius: 50%;
+  box-shadow: 0 2px 3px 0 rgba(0,0,0,.1);
+  display: inline-block;
+  height: 30px;
+  margin:4px 0 0;
+  position:relative;
+  width: 30px;
+  transition: all .2s ease;
+}
+
+input[type=checkbox] + span::before, input[type=checkbox] + span::after{
+  background:#fff;
+  content:'';
+  display:block;
+  position:absolute;
+  width:4px;
+  transition: all .2s ease;
+}
+
+input[type=checkbox] + span::before{
+  height:16px;
+  left:13px;
+  top:7px;
+  -webkit-transform:rotate(-45deg);
+  transform:rotate(-45deg);
+}
+
+input[type=checkbox] + span::after{
+  height:16px;
+  right:13px;
+  top:7px;
+  -webkit-transform:rotate(45deg);
+  transform:rotate(45deg);
+}
+
+input[type=checkbox]:checked + span {
+  background:#04aa6d;			    
+}
+
+input[type=checkbox]:checked + span::before{
+  height: 9px;
+  left: 9px;
+  top: 13px;
+  -webkit-transform:rotate(-47deg);
+  transform:rotate(-47deg);
+}
+
+input[type=checkbox]:checked + span::after{
+  height: 15px;
+  right: 11px;
+  top: 8px;
+}
+
+/*
+input[type=submit] {
+  background-color: #04aa6d;
+  border: 0;
+  border-radius: 4px;
+  color: #FFF;
+  cursor: pointer;
+  display: inline-block;
+  font-size:16px;
+  text-align: center;
+  padding: 12px 20px 14px;
+}*/
 /*}END.*/
