--- a/hiphp-desktop/src/style.css
+++ b/hiphp-desktop/src/style.css
@@ -41,7 +41,15 @@ input[type=button],.button{
 #connected{
     display:none;
     background-color: #04AA6D;
-    height: 40px;
+    height: 39px;
+}
+
+.w15{
+  width: 15px;
+}
+
+.text_center{
+  text-align: center;
 }
 
 .add_new{
