--- a/hiphp-desktop/src/style.css
+++ b/hiphp-desktop/src/style.css
@@ -372,4 +372,28 @@ input[type=submit] {
 #cat:focus-visible {
     outline:none;
 }
+
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  /*border-radius: 10px;*/
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #5e6060; 
+  /*border-radius: 10px;*/
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #3c3d3d; 
+}
 /*}END.*/
