--- a/hiphp-site/style.css
+++ b/hiphp-site/style.css
@@ -2,118 +2,8 @@
   border: none;
   margin: 0;
 }
-html,
-body {
+html,body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-}
-canvas {
-  background: white;
-  background: radial-gradient(#FFF, #DDD);
-  transform-origin: 0 0;
-  width: 100%;
-  height: 100%;
-}
-.ui {
-  display: none;
-  position: fixed;
-  z-index: 5;
-  bottom: 0;
-  left: 0;
-  width: 120px;
-  padding: 10px;
-  background: rgba(255, 255, 255, 0.7);
-}
-.ui p {
-  font-size: 11px;
-  font-weight: 700;
-}
-.ui p.zoom {
-  margin-bottom: 5px;
-}
-.ui p.zoom span {
-  margin-right: 5px;
-  border: solid 1px #777;
-  cursor: pointer;
-  border-radius: 2px;
-}
-.ui p.zoom span.zoomin {
-  padding: 2px 5px;
-}
-.ui p.zoom span.zoomout {
-  padding: 2px 8px;
-}
-.ui p.zoom span:hover {
-  background: black;
-  color: white;
-}
-
-.old {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  color: white;
-  cursor: pointer;
-  font-family: 'Courier New', Courier, monospace;
-}
-
-.old span:hover {
-  font-weight: bold;
-}
-
-.logo {
-  position: absolute;
-  margin: auto;
-  top: 50%;
-  left: 50%;
-  text-align: center;
-}
-
-.logo-img {
-  width: 230px;
-  /*height: 118px;*/
-  margin-left: -115px;
-  margin-top: -112px;
-  cursor: pointer;
-
-  -webkit-animation: fadein 8s; /* Safari, Chrome and Opera > 12.1 */
-     -moz-animation: fadein 8s; /* Firefox < 16 */
-      -ms-animation: fadein 8s; /* Internet Explorer */
-       -o-animation: fadein 8s; /* Opera < 12.1 */
-          animation: fadein 8s;
-}
-
-.logo-img:hover {
-  -webkit-filter: drop-shadow(1px 1px 1px dodgerblue) drop-shadow(-1px -1px 1px dodgerblue);
-  filter: drop-shadow(1px 1px 1px dodgerblue) drop-shadow(-1px -1px 1px dodgerblue);
-}
-
-@keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
 }
