--- a/hiphp-desktop/src/white.css
+++ b/hiphp-desktop/src/white.css
@@ -9,7 +9,7 @@ input[type=button],.button{
 
 input[type=text]{
     background-color: #fff;
-    color: white;
+    color: #30363d;
     border: 1px solid #30363d;
 }
 
