--- a/hiphp-desktop/src/style.css
+++ b/hiphp-desktop/src/style.css
@@ -25,14 +25,33 @@ input[type=text], input[type=password] {
 }
 
 
-input[type=button],.button{
+/*input[type=button],.button{
     border: none;
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
     padding: 5px 5px;
     border-radius: 3px;
+}*/
+
+/**/
+input[type=button],.button{
+  background-color: #303134;
+  border: 1px solid #303134;
+  border-radius: 4px;
+  color: #e8eaed;
+  font-family: arial,sans-serif;
+  font-size: 14px;
+  margin: 11px 4px;
+  padding: 0 16px;
+  line-height: 27px;
+  height: 36px;
+  min-width: 54px;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
 }
+
 
 #connected{
     display:none;
