--- a/hiphp-desktop/src/dark.css
+++ b/hiphp-desktop/src/dark.css
@@ -12,152 +12,30 @@
 */
 
 /*START{*/
-
-
 :root {
-    --default: #474b85;
-    --white: #ffffff;
-}
-
-body{
-    background-color: #0d1117;
-}
-
-input[type=button],.button{
-    background-color: var(--default);
-    color:var(--white);
-}
-
-/*input[type=text],input[type=password]{
-    background-color: #30363d;
-    color: white;
-    border: 1px solid #30363d;
-}*/
-
-input[type=text],input[type=password]{
-    color: var(--white);
-}
-
-.form__label {
-    color: #9b9b9b;
-}
-
-#connected{
-    background-color: #474b85;
-}
-.add_new{
-    background-color: #474b85;
-    color: #ffffff;
-}
-
-.reconnectx{
-    background-color: #474b85;
-    color: #ffffff;
-}
-
-spam{
-    color:#ffffff;
-}
-  
-spam:hover {
-    background-color: #777bb3;
-    height: 18px;
-}
-
-.settings{
-    background-color: #0d1117;
-}
-
-.return{
-    color:#ffffff;
-}
-
-#ls tr:nth-child(even), #settings tr:nth-child(even){background-color: #16191e;}
-
-#ls tr:hover, #settings tr:hover{background-color: #161b22;}
-
-#ls th, #settings th {
-    background-color: #5e6060;
-    color: white;
-}
-
-table{
-    color: white;
-}
-
-/**/
-.save{
-    color: #ffffff;
-}
-
-.select{
-    background-color: #474b85;
-}
-
-.c_red{
-    color:red;
-}
-.c_blue{
-    color:rgb(101 101 227);
-}
-.c_orange{
-    color: rgb(219, 126, 19);
-}
-.c_green{
-    color: #08a76d;
-}
-
-.holder{
-    background: #202730;
-    box-shadow: 0 2px 3px 0 rgba(0,0,0,.1);
-}
-
-input[type=checkbox] + span {
-    background: #e74c3c;
-    box-shadow: 0 2px 3px 0 rgba(0,0,0,.1);
-}
-
-input[type=checkbox] + span::before, input[type=checkbox] + span::after{
-    background:#fff;
-}
-
-input[type=checkbox]:checked + span {
-    background:#474b85;			    
-}
-
-#cat {
-    background-color:#0d1117;
-    border-color:#30363d;
-    color:#ffffff;
-}
-
-#lineCounter {
-    color: #707070;
-    background-color: #d8d8d8;
-    background-color:#262a30;
-    border-color:#30363d;
-    color:#928869;
-}
-
-/* width */
-::-webkit-scrollbar {
-    width: 10px;
-}
-  
-/* Track */
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    /*border-radius: 10px;*/
-}
-   
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #5e6060; 
-    /*border-radius: 10px;*/
-}
-  
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #3c3d3d; 
+    --c1:#474b85;
+    --c2:#ffffff;
+    --c3:#0d1117;
+    --c4:#9b9b9b;
+    --c5:#777bb3;
+    --c6:#16191e;
+    --c7:#161b22;
+    --c8:#5e6060;
+    --c9:#FF0000;
+    --c10:#6565E3;
+    --c11:#DB7E13;
+    --c12:#08a76d;
+    --c13:#202730;
+    --c14:#e74c3c;
+    --c15:#000000;
+    --c16:#30363d;
+    --c17:#707070;
+    --c18:#d8d8d8;
+    --c19:#262a30;
+    --c20:#928869;
+    --c21:#787878;
+    --c22:#5e6060;
+    --c23:#3c3d3d;
+    --c24:#ffffff;
 }
 /*}END.*/
