--- a/hiphp-desktop/src/white.css
+++ b/hiphp-desktop/src/white.css
@@ -12,145 +12,30 @@
 */
 
 /*START{*/
-body{
-    background-color: #dfdede;
-}
-
-input[type=button],.button{
-    background-color: #474b85;
-    color: white;
-}
-
-/*input[type=text],input[type=password]{
-    background-color: #fff;
-    color: #30363d;
-    border: 1px solid #30363d;
-}*/
-
-input[type=text],input[type=password]{
-    color: #30363d;
-}
-
-.form__label {
-    color: #9b9b9b;
-}
-
-#connected{
-    background-color: #474b85;
-}
-.add_new{
-    background-color: #474b85;
-    color: #ffffff;
-}
-
-.reconnectx{
-    background-color: #474b85;
-    color: #ffffff;
-}
-
-spam{
-    color:#ffffff;
-}
-  
-spam:hover {
-    background-color: #777bb3;
-    height: 18px;
-}
-
-.settings{
-    background-color: #e7e7e7;
-}
-
-.return{
-    color:#ffffff;
-}
-
-#ls tr:nth-child(even), #settings tr:nth-child(even){background-color: #f2f2f2;}
-
-#ls tr:hover, #settings tr:hover{background-color: #ddd;}
-
-#ls th, #settings th {
-    background-color: #5e6060;
-    color: white;
-}
-
-.table{
-    color: black;
-}
-
-/**/
-.save{
-    color: #ffffff;
-}
-
-.select{
-    background-color: #474b85;
-}
-
-.c_red{
-    color:red;
-}
-.c_blue{
-    color:rgb(101 101 227);
-}
-.c_orange{
-    color: rgb(219, 126, 19);
-}
-.c_green{
-    color: #08a76d;
-}
-
-.holder{
-    background: #fff;
-    box-shadow: 0 2px 3px 0 rgba(0,0,0,.1);
-}
-
-input[type=checkbox] + span {
-    background: #e74c3c;
-    box-shadow: 0 2px 3px 0 rgba(0,0,0,.1);
-}
-
-input[type=checkbox] + span::before, input[type=checkbox] + span::after{
-    background:#fff;
-}
-
-input[type=checkbox]:checked + span {
-    background:#474b85;			    
-}
-
-#cat {
-    background-color:#272822;
-    border-color:#272822;
-    color:#ffffff;
-}
-
-#lineCounter {
-    color: #707070;
-    background-color: #d8d8d8;
-    background-color:#3E3D32;
-    border-color:#3E3D32;
-    color:#928869;
-}
-
-/* width */
-::-webkit-scrollbar {
-    width: 10px;
-}
-  
-/* Track */
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    /*border-radius: 10px;*/
-}
-   
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #5e6060; 
-    /*border-radius: 10px;*/
-}
-  
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #3c3d3d; 
-}
-/*}END.*/
+    :root {
+        --c1: #474b85;
+        --c2: #000000;
+        --c3: #d1d1d1;
+        --c4: #9b9b9b;
+        --c5: #777bb3;
+        --c6: #d9d9d9;
+        --c7: #f2f2f2;
+        --c8: #5e6060;
+        --c9: #FF0000;
+        --c10: #6565E3;
+        --c11: #DB7E13;
+        --c12: #08a76d;
+        --c13: #ffffff;
+        --c14: #e74c3c;
+        --c15: #000000;
+        --c16: #30363d;
+        --c17: #707070;
+        --c18: #d8d8d8;
+        --c19: #202730;
+        --c20: #928869;
+        --c21: #787878;
+        --c22: #202730;
+        --c23: #0d1117;
+        --c24:#ffffff;
+    }
+    /*}END.*/
