--- a/hiphp-site/style.css
+++ b/hiphp-site/style.css
@@ -16,10 +16,26 @@
   border: none;
   margin: 0;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  font-family: Inter, sans-serif;
+  font-size: 13pt;
+  font-weight: 400;
+  font-variation-settings: 'wght' 400;
+  font-style: normal;
+}
+
 html,body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+}
+
+a{
+  text-decoration: none;
 }
 
 /**/
@@ -31,5 +47,56 @@ html,body {
   margin-left: -50%;
   width: 100%;
   height: 100px;
+}
+
+/*modal*/
+.modal-window {
+  position: fixed;
+  background-color: rgb(28 27 27 / 93%);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s;
+}
+.modal-window:target {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+}
+.modal-window > div {
+  width: 400px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2em;
+  background: white;
+}
+.modal-window header {
+  font-weight: bold;
+}
+.modal-window h1 {
+  font-size: 150%;
+  margin: 0 0 15px;
+}
+
+.modal-close {
+  color: #aaa;
+  line-height: 50px;
+  font-size: 80%;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 0;
+  width: 70px;
+  text-decoration: none;
+}
+.modal-close:hover {
+  color: black;
 }
 /*}END.*/
