--- a/hiphp-site/style.css
+++ b/hiphp-site/style.css
@@ -26,6 +26,7 @@ body {
   font-weight: 400;
   font-variation-settings: 'wght' 400;
   font-style: normal;
+  background: #ededed;
 }
 
 html,body {
@@ -38,10 +39,42 @@ a{
   text-decoration: none;
 }
 
+input[type=text] {
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/**/
+.center{
+  text-align: center;
+}
+.p15{
+  padding: 15px;
+}
+.h100{
+  height: 100px;
+}
+
 /**/
 .tocenter {
   position: absolute;
-  top: 40%;
+  top: 25%;
   left: 50%;
   margin-top: -50px;
   margin-left: -50%;
