--- a/hiphp-examples/server/style.css
+++ b/hiphp-examples/server/style.css
@@ -1,3 +1,18 @@
+/*
+#   |                                                         |   #
+# --+---------------------------------------------------------+-- #
+#   |    Code by: yasserbdj96                                 |   #
+#   |    Email: yasser.bdj96@gmail.com                        |   #
+#   |    GitHub: github.com/yasserbdj96                       |   #
+#   |    Sponsor: github.com/sponsors/yasserbdj96             |   #
+#   |    BTC: bc1q2dks8w8uurca5xmfwv4jwl7upehyjjakr3xga9      |   #
+#   |                                                         |   #
+#   |    All posts with #yasserbdj96                          |   #
+#   |    All views are my own.                                |   #
+# --+---------------------------------------------------------+-- #
+#   |                                                         |   #
+*/
+
 body{font-family: monospace;margin:0;background:linear-gradient(270deg,#48367d 0,#241842 100%)}
 .container{display:flex;flex-wrap:wrap;justify-content:center;align-items:center;flex-direction:column;margin-top:40px}
 h1{line-height:1.2;font-weight:700;font-size:2.2em;color:#2e2e2e;text-align:center}
