--- a/hiphp-online/static/css/dark.css
+++ b/hiphp-online/static/css/dark.css
@@ -1,4 +1,4 @@
-<?php
+/*
 #   |                                                         |   #
 # --+---------------------------------------------------------+-- #
 #   |    Code by: yasserbdj96                                 |   #
@@ -11,13 +11,33 @@
 #   |    All views are my own.                                |   #
 # --+---------------------------------------------------------+-- #
 #   |                                                         |   #
+*/
 
-    #START{
-    // variables check:
-    if("__var1__"=="true"){
-        echo "This is a test with a variable. var1_value=__var1__, var2_value=__var2__";
-    }else{
-        echo "This is a test without a variable.";
-    }
-#}END.
-?>
+/*START{*/
+:root {
+    --c1:#474b85;
+    --c2:#ffffff;
+    --c3:#0d1117;
+    --c4:#9b9b9b;
+    --c5:#777bb3;
+    --c6:#16191e;
+    --c7:#161b22;
+    --c8:#5e6060;
+    --c9:#FF0000;
+    --c10:#6565E3;
+    --c11:#DB7E13;
+    --c12:#08a76d;
+    --c13:#202730;
+    --c14:#e74c3c;
+    --c15:#000000;
+    --c16:#30363d;
+    --c17:#707070;
+    --c18:#d8d8d8;
+    --c19:#262a30;
+    --c20:#928869;
+    --c21:#787878;
+    --c22:#5e6060;
+    --c23:#3c3d3d;
+    --c24:#ffffff;
+}
+/*}END.*/
